# unauthscout-cpp

./: CMakeLists.txt  LEIAME.md  LICENSE  README.md
include/cli/: args.hpp
include/core/: utils.hpp
include/github/: api.hpp
include/gitlab/: api.hpp
include/helpers/: file.hpp
include/report/: render.hpp
output/: torvalds_2026-02-07.json  torvalds_repos_2026-02-07.json
src/: main.cpp
src/cli/: args.cpp
src/core/: utils.cpp
src/github/: api.cpp
src/gitlab/: api.cpp
src/helpers/: file.cpp
src/report/: render.cpp
